# Pendulum-Arm-Calculator

./: CMakeLists.txt
inlcude/pendulum/control/: Controller.hpp  PID.hpp
inlcude/pendulum/dynamics/: Motor.hpp  PendulumArm.hpp  SystemState.hpp
inlcude/pendulum/simulation/: Renderer.hpp  Simulator.hpp
inlcude/pendulum/utils/: Config.hpp
python/: camera_capture.py  requirements.txt
python/utils/: config.py  find_camera.py
src/: main.cpp
src/control/: Controller.cpp  PID.cpp
src/dynamics/: Motor.cpp  PendulumArm.cpp
src/simulation/: Renderer.cpp  Simulator.cpp
